// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checks that the App DOM is consistent 1`] = `
<div
  className="App"
>
  <div
    data-testid="splashWrap"
  >
    <div
      className=""
      data-testid="screen"
      id="splash"
      onClick={[Function]}
    >
      <div
        id="logoHolder"
      >
        <img
          alt="Logo"
          className="noselect"
          id="splashLogo"
          src="/svg/logo.svg"
        />
        <span
          data-testid="appName"
          id="splashText"
        >
          mélodie
        </span>
      </div>
      <div
        id="piano"
      >
        <div
          id="pianoHolder"
        >
          <div
            id="keyHeader"
          >
            <span
              data-testid="helper"
              id="playHelp"
            >
              Play the virtual keys using your keyboard, or by clicking on them!
            </span>
            <div
              id="splashBottom"
            >
              <div
                className="material"
                data-testid="material-click"
              >
                touch_app
              </div>
              <span
                data-testid="click"
              >
                click to continue...
              </span>
            </div>
          </div>
          <img
            alt="Piano Illustration"
            className="noselect"
            id="pianoImage"
            src="/piano.png"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    id="top"
  >
    <div
      id="container"
    >
      <img
        alt="Header Logo"
        className="noselect"
        id="logo"
        src="/svg/logo.svg"
      />
      <span
        data-testid="appText"
      >
        mélodie
      </span>
    </div>
    <img
      alt="Visual Effect 1"
      className="effects noselect"
      id="triangle"
      src="/svg/triangle.svg"
    />
  </div>
  <div
    id="middle"
  >
    <div
      id="controls"
    >
      <div
        id="metronome"
      >
        <img
          alt="Metronome Icon"
          className="noselect"
          id="metroIcon"
          src="/svg/metronome.svg"
        />
        <input
          data-testid="bpmText"
          id="bpmInput"
          onBlur={[Function]}
          onChange={[Function]}
          style={
            Object {
              "width": "27px",
            }
          }
          type="text"
          value="50"
        />
        <span
          data-testid="beatText"
          id="beats"
        >
          beats
        </span>
        <div
          data-testid="playButton"
          id="play"
          onClick={[Function]}
        >
          <span
            className="noselect material"
            data-testid="playIcon"
          >
            play_arrow
          </span>
        </div>
      </div>
      <div
        id="volumeWrap"
      >
        <span
          className="material noselect"
          data-testid="volumeMaterial"
          id="volumeIcon"
        >
          volume_up
        </span>
        <input
          className="slider"
          data-testid="sliderItem"
          id="volume"
          max="100"
          min="1"
          onChange={[Function]}
          type="range"
          value="50"
        />
      </div>
    </div>
    <div
      id="keyboard"
    >
      <div
        className="section"
        id="section-1"
      >
        <div
          className="key"
          data-testid="keyTest1"
          id="key-1"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="white-1"
          >
            1
          </span>
        </div>
        <div
          className="black_key"
          data-testid="keyTest!"
          id="black-!"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="black-!"
          >
            !
          </span>
        </div>
      </div>
      <div
        className="section"
        id="section-2"
      >
        <div
          className="key"
          data-testid="keyTest2"
          id="key-2"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="white-2"
          >
            2
          </span>
        </div>
        <div
          className="black_key"
          data-testid="keyTest@"
          id="black-@"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="black-@"
          >
            @
          </span>
        </div>
      </div>
      <div
        className="section"
        id="section-3"
      >
        <div
          className="key"
          data-testid="keyTest3"
          id="key-3"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="white-3"
          >
            3
          </span>
        </div>
      </div>
      <div
        className="section"
        id="section-4"
      >
        <div
          className="key"
          data-testid="keyTest4"
          id="key-4"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="white-4"
          >
            4
          </span>
        </div>
        <div
          className="black_key"
          data-testid="keyTest$"
          id="black-$"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="black-$"
          >
            $
          </span>
        </div>
      </div>
      <div
        className="section"
        id="section-5"
      >
        <div
          className="key"
          data-testid="keyTest5"
          id="key-5"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="white-5"
          >
            5
          </span>
        </div>
        <div
          className="black_key"
          data-testid="keyTest%"
          id="black-%"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="black-%"
          >
            %
          </span>
        </div>
      </div>
      <div
        className="section"
        id="section-6"
      >
        <div
          className="key"
          data-testid="keyTest6"
          id="key-6"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="white-6"
          >
            6
          </span>
        </div>
        <div
          className="black_key"
          data-testid="keyTest^"
          id="black-^"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="black-^"
          >
            ^
          </span>
        </div>
      </div>
      <div
        className="section"
        id="section-7"
      >
        <div
          className="key"
          data-testid="keyTest7"
          id="key-7"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="white-7"
          >
            7
          </span>
        </div>
      </div>
      <div
        className="section"
        id="section-8"
      >
        <div
          className="key"
          data-testid="keyTest8"
          id="key-8"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="white-8"
          >
            8
          </span>
        </div>
        <div
          className="black_key"
          data-testid="keyTest*"
          id="black-*"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="black-*"
          >
            *
          </span>
        </div>
      </div>
      <div
        className="section"
        id="section-9"
      >
        <div
          className="key"
          data-testid="keyTest9"
          id="key-9"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="white-9"
          >
            9
          </span>
        </div>
        <div
          className="black_key"
          data-testid="keyTest("
          id="black-("
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="black-("
          >
            (
          </span>
        </div>
      </div>
      <div
        className="section"
        id="section-0"
      >
        <div
          className="key"
          data-testid="keyTest0"
          id="key-0"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="white-0"
          >
            0
          </span>
        </div>
      </div>
      <div
        className="section"
        id="section-q"
      >
        <div
          className="key"
          data-testid="keyTestq"
          id="key-q"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="white-q"
          >
            q
          </span>
        </div>
        <div
          className="black_key"
          data-testid="keyTestQ"
          id="black-Q"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="black-Q"
          >
            Q
          </span>
        </div>
      </div>
      <div
        className="section"
        id="section-w"
      >
        <div
          className="key"
          data-testid="keyTestw"
          id="key-w"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="white-w"
          >
            w
          </span>
        </div>
        <div
          className="black_key"
          data-testid="keyTestW"
          id="black-W"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="black-W"
          >
            W
          </span>
        </div>
      </div>
      <div
        className="section"
        id="section-e"
      >
        <div
          className="key"
          data-testid="keyTeste"
          id="key-e"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="white-e"
          >
            e
          </span>
        </div>
        <div
          className="black_key"
          data-testid="keyTestE"
          id="black-E"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="black-E"
          >
            E
          </span>
        </div>
      </div>
      <div
        className="section"
        id="section-r"
      >
        <div
          className="key"
          data-testid="keyTestr"
          id="key-r"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="white-r"
          >
            r
          </span>
        </div>
      </div>
      <div
        className="section"
        id="section-t"
      >
        <div
          className="key"
          data-testid="keyTestt"
          id="key-t"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="white-t"
          >
            t
          </span>
        </div>
        <div
          className="black_key"
          data-testid="keyTestT"
          id="black-T"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="black-T"
          >
            T
          </span>
        </div>
      </div>
      <div
        className="section"
        id="section-y"
      >
        <div
          className="key"
          data-testid="keyTesty"
          id="key-y"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="white-y"
          >
            y
          </span>
        </div>
        <div
          className="black_key"
          data-testid="keyTestY"
          id="black-Y"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="black-Y"
          >
            Y
          </span>
        </div>
      </div>
      <div
        className="section"
        id="section-u"
      >
        <div
          className="key"
          data-testid="keyTestu"
          id="key-u"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="white-u"
          >
            u
          </span>
        </div>
      </div>
      <div
        className="section"
        id="section-i"
      >
        <div
          className="key"
          data-testid="keyTesti"
          id="key-i"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="white-i"
          >
            i
          </span>
        </div>
        <div
          className="black_key"
          data-testid="keyTestI"
          id="black-I"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="black-I"
          >
            I
          </span>
        </div>
      </div>
      <div
        className="section"
        id="section-o"
      >
        <div
          className="key"
          data-testid="keyTesto"
          id="key-o"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="white-o"
          >
            o
          </span>
        </div>
        <div
          className="black_key"
          data-testid="keyTestO"
          id="black-O"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="black-O"
          >
            O
          </span>
        </div>
      </div>
      <div
        className="section"
        id="section-p"
      >
        <div
          className="key"
          data-testid="keyTestp"
          id="key-p"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="white-p"
          >
            p
          </span>
        </div>
        <div
          className="black_key"
          data-testid="keyTestP"
          id="black-P"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="black-P"
          >
            P
          </span>
        </div>
      </div>
      <div
        className="section"
        id="section-a"
      >
        <div
          className="key"
          data-testid="keyTesta"
          id="key-a"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="white-a"
          >
            a
          </span>
        </div>
      </div>
      <div
        className="section"
        id="section-s"
      >
        <div
          className="key"
          data-testid="keyTests"
          id="key-s"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="white-s"
          >
            s
          </span>
        </div>
        <div
          className="black_key"
          data-testid="keyTestS"
          id="black-S"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="black-S"
          >
            S
          </span>
        </div>
      </div>
      <div
        className="section"
        id="section-d"
      >
        <div
          className="key"
          data-testid="keyTestd"
          id="key-d"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="white-d"
          >
            d
          </span>
        </div>
        <div
          className="black_key"
          data-testid="keyTestD"
          id="black-D"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="black-D"
          >
            D
          </span>
        </div>
      </div>
      <div
        className="section"
        id="section-f"
      >
        <div
          className="key"
          data-testid="keyTestf"
          id="key-f"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="white-f"
          >
            f
          </span>
        </div>
      </div>
      <div
        className="section"
        id="section-g"
      >
        <div
          className="key"
          data-testid="keyTestg"
          id="key-g"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="white-g"
          >
            g
          </span>
        </div>
        <div
          className="black_key"
          data-testid="keyTestG"
          id="black-G"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="black-G"
          >
            G
          </span>
        </div>
      </div>
      <div
        className="section"
        id="section-h"
      >
        <div
          className="key"
          data-testid="keyTesth"
          id="key-h"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="white-h"
          >
            h
          </span>
        </div>
        <div
          className="black_key"
          data-testid="keyTestH"
          id="black-H"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="black-H"
          >
            H
          </span>
        </div>
      </div>
      <div
        className="section"
        id="section-j"
      >
        <div
          className="key"
          data-testid="keyTestj"
          id="key-j"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="white-j"
          >
            j
          </span>
        </div>
        <div
          className="black_key"
          data-testid="keyTestJ"
          id="black-J"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="black-J"
          >
            J
          </span>
        </div>
      </div>
      <div
        className="section"
        id="section-k"
      >
        <div
          className="key"
          data-testid="keyTestk"
          id="key-k"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="white-k"
          >
            k
          </span>
        </div>
      </div>
      <div
        className="section"
        id="section-l"
      >
        <div
          className="key"
          data-testid="keyTestl"
          id="key-l"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="white-l"
          >
            l
          </span>
        </div>
        <div
          className="black_key"
          data-testid="keyTestL"
          id="black-L"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="black-L"
          >
            L
          </span>
        </div>
      </div>
      <div
        className="section"
        id="section-z"
      >
        <div
          className="key"
          data-testid="keyTestz"
          id="key-z"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="white-z"
          >
            z
          </span>
        </div>
        <div
          className="black_key"
          data-testid="keyTestZ"
          id="black-Z"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="black-Z"
          >
            Z
          </span>
        </div>
      </div>
      <div
        className="section"
        id="section-x"
      >
        <div
          className="key"
          data-testid="keyTestx"
          id="key-x"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="white-x"
          >
            x
          </span>
        </div>
      </div>
      <div
        className="section"
        id="section-c"
      >
        <div
          className="key"
          data-testid="keyTestc"
          id="key-c"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="white-c"
          >
            c
          </span>
        </div>
        <div
          className="black_key"
          data-testid="keyTestC"
          id="black-C"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="black-C"
          >
            C
          </span>
        </div>
      </div>
      <div
        className="section"
        id="section-v"
      >
        <div
          className="key"
          data-testid="keyTestv"
          id="key-v"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="white-v"
          >
            v
          </span>
        </div>
        <div
          className="black_key"
          data-testid="keyTestV"
          id="black-V"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="black-V"
          >
            V
          </span>
        </div>
      </div>
      <div
        className="section"
        id="section-b"
      >
        <div
          className="key"
          data-testid="keyTestb"
          id="key-b"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="white-b"
          >
            b
          </span>
        </div>
        <div
          className="black_key"
          data-testid="keyTestB"
          id="black-B"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="black-B"
          >
            B
          </span>
        </div>
      </div>
      <div
        className="section"
        id="section-n"
      >
        <div
          className="key"
          data-testid="keyTestn"
          id="key-n"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="white-n"
          >
            n
          </span>
        </div>
      </div>
      <div
        className="section"
        id="section-m"
      >
        <div
          className="key"
          data-testid="keyTestm"
          id="key-m"
          onMouseDown={[Function]}
        >
          <span
            className="noselect"
            data-testid="white-m"
          >
            m
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    id="bottom"
  >
    <div
      id="noteWrap"
    >
      <img
        alt="Note Circle"
        className="effects noselect"
        id="note"
        src="/svg/notecircle.svg"
      />
      <span
        data-testid="noteBubble"
        id="current"
      >
        🎹
      </span>
    </div>
  </div>
  <img
    alt="Visual Effect 2"
    className="effects noselect"
    id="tricircle"
    src="/svg/tricircle.svg"
  />
  <img
    alt="Visual Effect 3"
    className="effects noselect"
    id="polygon"
    src="/svg/polygon.svg"
  />
</div>
`;

exports[`checks that the Keyboard DOM is consistent 1`] = `
<div
  id="keyboard"
>
  <div
    className="section"
    id="section-1"
  >
    <div
      className="key"
      data-testid="keyTest1"
      id="key-1"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="white-1"
      >
        1
      </span>
    </div>
    <div
      className="black_key"
      data-testid="keyTest!"
      id="black-!"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="black-!"
      >
        !
      </span>
    </div>
  </div>
  <div
    className="section"
    id="section-2"
  >
    <div
      className="key"
      data-testid="keyTest2"
      id="key-2"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="white-2"
      >
        2
      </span>
    </div>
    <div
      className="black_key"
      data-testid="keyTest@"
      id="black-@"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="black-@"
      >
        @
      </span>
    </div>
  </div>
  <div
    className="section"
    id="section-3"
  >
    <div
      className="key"
      data-testid="keyTest3"
      id="key-3"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="white-3"
      >
        3
      </span>
    </div>
  </div>
  <div
    className="section"
    id="section-4"
  >
    <div
      className="key"
      data-testid="keyTest4"
      id="key-4"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="white-4"
      >
        4
      </span>
    </div>
    <div
      className="black_key"
      data-testid="keyTest$"
      id="black-$"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="black-$"
      >
        $
      </span>
    </div>
  </div>
  <div
    className="section"
    id="section-5"
  >
    <div
      className="key"
      data-testid="keyTest5"
      id="key-5"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="white-5"
      >
        5
      </span>
    </div>
    <div
      className="black_key"
      data-testid="keyTest%"
      id="black-%"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="black-%"
      >
        %
      </span>
    </div>
  </div>
  <div
    className="section"
    id="section-6"
  >
    <div
      className="key"
      data-testid="keyTest6"
      id="key-6"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="white-6"
      >
        6
      </span>
    </div>
    <div
      className="black_key"
      data-testid="keyTest^"
      id="black-^"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="black-^"
      >
        ^
      </span>
    </div>
  </div>
  <div
    className="section"
    id="section-7"
  >
    <div
      className="key"
      data-testid="keyTest7"
      id="key-7"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="white-7"
      >
        7
      </span>
    </div>
  </div>
  <div
    className="section"
    id="section-8"
  >
    <div
      className="key"
      data-testid="keyTest8"
      id="key-8"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="white-8"
      >
        8
      </span>
    </div>
    <div
      className="black_key"
      data-testid="keyTest*"
      id="black-*"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="black-*"
      >
        *
      </span>
    </div>
  </div>
  <div
    className="section"
    id="section-9"
  >
    <div
      className="key"
      data-testid="keyTest9"
      id="key-9"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="white-9"
      >
        9
      </span>
    </div>
    <div
      className="black_key"
      data-testid="keyTest("
      id="black-("
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="black-("
      >
        (
      </span>
    </div>
  </div>
  <div
    className="section"
    id="section-0"
  >
    <div
      className="key"
      data-testid="keyTest0"
      id="key-0"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="white-0"
      >
        0
      </span>
    </div>
  </div>
  <div
    className="section"
    id="section-q"
  >
    <div
      className="key"
      data-testid="keyTestq"
      id="key-q"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="white-q"
      >
        q
      </span>
    </div>
    <div
      className="black_key"
      data-testid="keyTestQ"
      id="black-Q"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="black-Q"
      >
        Q
      </span>
    </div>
  </div>
  <div
    className="section"
    id="section-w"
  >
    <div
      className="key"
      data-testid="keyTestw"
      id="key-w"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="white-w"
      >
        w
      </span>
    </div>
    <div
      className="black_key"
      data-testid="keyTestW"
      id="black-W"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="black-W"
      >
        W
      </span>
    </div>
  </div>
  <div
    className="section"
    id="section-e"
  >
    <div
      className="key"
      data-testid="keyTeste"
      id="key-e"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="white-e"
      >
        e
      </span>
    </div>
    <div
      className="black_key"
      data-testid="keyTestE"
      id="black-E"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="black-E"
      >
        E
      </span>
    </div>
  </div>
  <div
    className="section"
    id="section-r"
  >
    <div
      className="key"
      data-testid="keyTestr"
      id="key-r"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="white-r"
      >
        r
      </span>
    </div>
  </div>
  <div
    className="section"
    id="section-t"
  >
    <div
      className="key"
      data-testid="keyTestt"
      id="key-t"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="white-t"
      >
        t
      </span>
    </div>
    <div
      className="black_key"
      data-testid="keyTestT"
      id="black-T"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="black-T"
      >
        T
      </span>
    </div>
  </div>
  <div
    className="section"
    id="section-y"
  >
    <div
      className="key"
      data-testid="keyTesty"
      id="key-y"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="white-y"
      >
        y
      </span>
    </div>
    <div
      className="black_key"
      data-testid="keyTestY"
      id="black-Y"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="black-Y"
      >
        Y
      </span>
    </div>
  </div>
  <div
    className="section"
    id="section-u"
  >
    <div
      className="key"
      data-testid="keyTestu"
      id="key-u"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="white-u"
      >
        u
      </span>
    </div>
  </div>
  <div
    className="section"
    id="section-i"
  >
    <div
      className="key"
      data-testid="keyTesti"
      id="key-i"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="white-i"
      >
        i
      </span>
    </div>
    <div
      className="black_key"
      data-testid="keyTestI"
      id="black-I"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="black-I"
      >
        I
      </span>
    </div>
  </div>
  <div
    className="section"
    id="section-o"
  >
    <div
      className="key"
      data-testid="keyTesto"
      id="key-o"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="white-o"
      >
        o
      </span>
    </div>
    <div
      className="black_key"
      data-testid="keyTestO"
      id="black-O"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="black-O"
      >
        O
      </span>
    </div>
  </div>
  <div
    className="section"
    id="section-p"
  >
    <div
      className="key"
      data-testid="keyTestp"
      id="key-p"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="white-p"
      >
        p
      </span>
    </div>
    <div
      className="black_key"
      data-testid="keyTestP"
      id="black-P"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="black-P"
      >
        P
      </span>
    </div>
  </div>
  <div
    className="section"
    id="section-a"
  >
    <div
      className="key"
      data-testid="keyTesta"
      id="key-a"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="white-a"
      >
        a
      </span>
    </div>
  </div>
  <div
    className="section"
    id="section-s"
  >
    <div
      className="key"
      data-testid="keyTests"
      id="key-s"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="white-s"
      >
        s
      </span>
    </div>
    <div
      className="black_key"
      data-testid="keyTestS"
      id="black-S"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="black-S"
      >
        S
      </span>
    </div>
  </div>
  <div
    className="section"
    id="section-d"
  >
    <div
      className="key"
      data-testid="keyTestd"
      id="key-d"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="white-d"
      >
        d
      </span>
    </div>
    <div
      className="black_key"
      data-testid="keyTestD"
      id="black-D"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="black-D"
      >
        D
      </span>
    </div>
  </div>
  <div
    className="section"
    id="section-f"
  >
    <div
      className="key"
      data-testid="keyTestf"
      id="key-f"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="white-f"
      >
        f
      </span>
    </div>
  </div>
  <div
    className="section"
    id="section-g"
  >
    <div
      className="key"
      data-testid="keyTestg"
      id="key-g"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="white-g"
      >
        g
      </span>
    </div>
    <div
      className="black_key"
      data-testid="keyTestG"
      id="black-G"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="black-G"
      >
        G
      </span>
    </div>
  </div>
  <div
    className="section"
    id="section-h"
  >
    <div
      className="key"
      data-testid="keyTesth"
      id="key-h"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="white-h"
      >
        h
      </span>
    </div>
    <div
      className="black_key"
      data-testid="keyTestH"
      id="black-H"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="black-H"
      >
        H
      </span>
    </div>
  </div>
  <div
    className="section"
    id="section-j"
  >
    <div
      className="key"
      data-testid="keyTestj"
      id="key-j"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="white-j"
      >
        j
      </span>
    </div>
    <div
      className="black_key"
      data-testid="keyTestJ"
      id="black-J"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="black-J"
      >
        J
      </span>
    </div>
  </div>
  <div
    className="section"
    id="section-k"
  >
    <div
      className="key"
      data-testid="keyTestk"
      id="key-k"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="white-k"
      >
        k
      </span>
    </div>
  </div>
  <div
    className="section"
    id="section-l"
  >
    <div
      className="key"
      data-testid="keyTestl"
      id="key-l"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="white-l"
      >
        l
      </span>
    </div>
    <div
      className="black_key"
      data-testid="keyTestL"
      id="black-L"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="black-L"
      >
        L
      </span>
    </div>
  </div>
  <div
    className="section"
    id="section-z"
  >
    <div
      className="key"
      data-testid="keyTestz"
      id="key-z"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="white-z"
      >
        z
      </span>
    </div>
    <div
      className="black_key"
      data-testid="keyTestZ"
      id="black-Z"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="black-Z"
      >
        Z
      </span>
    </div>
  </div>
  <div
    className="section"
    id="section-x"
  >
    <div
      className="key"
      data-testid="keyTestx"
      id="key-x"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="white-x"
      >
        x
      </span>
    </div>
  </div>
  <div
    className="section"
    id="section-c"
  >
    <div
      className="key"
      data-testid="keyTestc"
      id="key-c"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="white-c"
      >
        c
      </span>
    </div>
    <div
      className="black_key"
      data-testid="keyTestC"
      id="black-C"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="black-C"
      >
        C
      </span>
    </div>
  </div>
  <div
    className="section"
    id="section-v"
  >
    <div
      className="key"
      data-testid="keyTestv"
      id="key-v"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="white-v"
      >
        v
      </span>
    </div>
    <div
      className="black_key"
      data-testid="keyTestV"
      id="black-V"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="black-V"
      >
        V
      </span>
    </div>
  </div>
  <div
    className="section"
    id="section-b"
  >
    <div
      className="key"
      data-testid="keyTestb"
      id="key-b"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="white-b"
      >
        b
      </span>
    </div>
    <div
      className="black_key"
      data-testid="keyTestB"
      id="black-B"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="black-B"
      >
        B
      </span>
    </div>
  </div>
  <div
    className="section"
    id="section-n"
  >
    <div
      className="key"
      data-testid="keyTestn"
      id="key-n"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="white-n"
      >
        n
      </span>
    </div>
  </div>
  <div
    className="section"
    id="section-m"
  >
    <div
      className="key"
      data-testid="keyTestm"
      id="key-m"
      onMouseDown={[Function]}
    >
      <span
        className="noselect"
        data-testid="white-m"
      >
        m
      </span>
    </div>
  </div>
</div>
`;

exports[`checks that the Metronome DOM is consistent 1`] = `
<div
  id="metronome"
>
  <img
    alt="Metronome Icon"
    className="noselect"
    id="metroIcon"
    src="/svg/metronome.svg"
  />
  <input
    data-testid="bpmText"
    id="bpmInput"
    onBlur={[Function]}
    onChange={[Function]}
    style={
      Object {
        "width": "27px",
      }
    }
    type="text"
    value="50"
  />
  <span
    data-testid="beatText"
    id="beats"
  >
    beats
  </span>
  <div
    data-testid="playButton"
    id="play"
    onClick={[Function]}
  >
    <span
      className="noselect material"
      data-testid="playIcon"
    >
      play_arrow
    </span>
  </div>
</div>
`;

exports[`checks that the Splash DOM is consistent 1`] = `
<div
  className=""
  data-testid="screen"
  id="splash"
  onClick={[Function]}
>
  <div
    id="logoHolder"
  >
    <img
      alt="Logo"
      className="noselect"
      id="splashLogo"
      src="/svg/logo.svg"
    />
    <span
      data-testid="appName"
      id="splashText"
    >
      mélodie
    </span>
  </div>
  <div
    id="piano"
  >
    <div
      id="pianoHolder"
    >
      <div
        id="keyHeader"
      >
        <span
          data-testid="helper"
          id="playHelp"
        >
          Play the virtual keys using your keyboard, or by clicking on them!
        </span>
        <div
          id="splashBottom"
        >
          <div
            className="material"
            data-testid="material-click"
          >
            touch_app
          </div>
          <span
            data-testid="click"
          >
            click to continue...
          </span>
        </div>
      </div>
      <img
        alt="Piano Illustration"
        className="noselect"
        id="pianoImage"
        src="/piano.png"
      />
    </div>
  </div>
</div>
`;

exports[`checks that the Volume DOM is consistent 1`] = `
<div
  id="volumeWrap"
>
  <span
    className="material noselect"
    data-testid="volumeMaterial"
    id="volumeIcon"
  >
    volume_up
  </span>
  <input
    className="slider"
    data-testid="sliderItem"
    id="volume"
    max="100"
    min="1"
    onChange={[Function]}
    type="range"
  />
</div>
`;
